fixed scrollbar

--- a/assets/css/data.css
+++ b/assets/css/data.css
@@ -411,7 +411,7 @@
 
 .data-table-design{ 
     width:99.90vw;
-    height:83vh; 
+    height:81.5vh; 
     overflow: auto !important;            
 }
 .smoothTable { 
